--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         def nav_version = "2.5.3"
         classpath 'com.google.gms:google-services:4.3.13'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
     }
 }
 
@@ -16,7 +17,8 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
 
